# chaos

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  __assets_head.html  package-lock.json  tailwind.config.js
public/: tailwind.css
src/: app.rs  coupler.rs  main.rs  peer.rs  scheduler.rs  state.rs  utils.rs
src/utils/: crypto.rs  message.rs  webrtc.rs
