[package]
name = "chaos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
egui = "0.25.0"
eframe = {version = "0.25.0", features = ["default", "persistence"] }
env_logger = "0.10.1"
serde = {version ="1.0.195", features = ["derive"]}
tokio = "1.35.1"
webrtc = "0.9.0"
